my-portfolio/src/components/sections/card-section/CardSection.css
/* ========== CARD SECTION STYLING========== */

/* This component contains stylings for the cards displayed under Featured Projects and My Journey. The cards contain heading, image, body-text, and button/-s. 

The buttons are imported from Button.jsx. Layout for specific buttons can be found further down in this file. 

*/

.card-section {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 4rem 0;
    width: 100%;
    gap: 2rem;
  }
  
  .card-section h2 {
    margin-bottom: 2rem;
    text-align: center;
  }
  
  .cards-container {
    display: grid;
		grid-template-columns: repeat(4, 1fr);
    gap: 2rem;
    justify-content: center;
    width: 100%;
  }
  
  .project-card, .article-card {
    display: flex;
    flex-direction: column;
		align-self: stretch;
    background-color: var(--natural-color);
    padding: 1.5rem;
    border-radius: 10px;
    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
    width: 250px;
    gap: 1rem;
    transition: transform 0.3s ease;
  }
  
  .project-card:hover, .article-card:hover {
    transform: translateY(-10px);
  }
  
  .project-image, .article-image {
    width: 100%;
    height: 150px;
    border-radius: 8px;
    background-size: cover;
    background-position: center;
    background-blend-mode: overlay;
  }
  .project-card, .article-card .content {
    font-size: 0.875rem;
    text-align: left;
		align-self: stretch;
		flex-grow: 1;
  }
	.article-card .body-text {
		font-size: 1.125rem;
		align-self: stretch;
		text-align: left;
	}

  .project-card .body-text {
    text-align: left;
    font-size: 1.125rem;
		align-self: stretch;
  }

	.article-card .date {
    font-size: 1.125rem;
    align-self: stretch;
    text-align: left;
}

/* ========== BUTTONS STYLING ========== */

.project-buttons {
  display: flex;
  gap: 1rem; /* Space between the buttons */
  width: 100%; 
}

.project-buttons {
  flex: 1; /* Makes each button take up equal space */
	margin-top: auto;
	width: 100%;
}

.article-card button {
  margin-top: auto;
}

